--- a/Virtual_Machine/test.vm
+++ b/Virtual_Machine/test.vm
@@ -1,6 +1,6 @@
 push constant 10 
 push constant 10 
-gt 
-push constant 10 
-push constant 10 
-lt 
+label loop
+    add 
+    push constant 10 
+goto loop
